front page dark mode fixes

--- a/assets/sass/colours.scss
+++ b/assets/sass/colours.scss
@@ -211,7 +211,7 @@ body{
             background: #242424;
         }
         .sc-home-services:after{
-            background: #242424;
+            background: #000000;
         }
         .sc-two-col-img-txt{
             .two-col-row{
