--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1851,6 +1851,8 @@ z-index: 1;
   padding-left: 0;
   margin-bottom: 0;
   justify-content: space-between;
+  position: relative;
+  z-index: 1;
   flex-wrap: wrap;
  > li{
     width: 100%;
@@ -2378,6 +2380,8 @@ z-index: 1;
   .front-news-more-cnt{
     text-align: center;
     margin-top: 4rem;
+    position: relative;
+z-index: 1;
   }
   .front-news-more{
     
